--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,8 @@
 name: belajar_dart_library
 description: A starting point for Dart libraries or applications.
 version: 1.5.0
+homepage: https://github.com/username/belajar_dart_library
+repository: https://github.com/username/belajar_dart_library
 # repository: https://github.com/my_org/my_repo
 
 environment:
@@ -8,6 +10,7 @@ environment:
 
 # Add regular dependencies here.
 dependencies:
+  http: ^1.2.0
   # path: ^1.9.0
 
 dev_dependencies:
