--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: belajar_dart_library
-description: A starting point for Dart libraries or applications.
+description: A simple Dart package for learning Dart library structure and usage.
 version: 1.5.0
 homepage: https://github.com/username/belajar_dart_library
 repository: https://github.com/username/belajar_dart_library
